// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccountProfileForm /> should render properly when a user cancels 1`] = `
Array [
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

<h3
    className="emotion-0"
  >
    Email: jane.doe@zorroa.com
  </h3>,
  .emotion-0 {
  padding-top: 24px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

<div
    className="emotion-0"
  >
    Name
  </div>,
  .emotion-0 {
  color: #808080;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  padding-bottom: 24px;
}

<div
    className="emotion-0"
  >
     
  </div>,
  .emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited,
.emotion-0 .noop {
  background-color: #73b61c;
}

.emotion-0:hover,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-0[aria-disabled=true],
.emotion-0 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<button
    className="emotion-0"
    onClick={[Function]}
    type="button"
  >
    Edit
  </button>,
]
`;

exports[`<AccountProfileForm /> should render properly when a user edits their name 1`] = `
Array [
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

<h3
    className="emotion-0"
  >
    Email: jane.doe@zorroa.com
  </h3>,
  .emotion-0 {
  padding-top: 24px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

<div
    className="emotion-0"
  >
    Name
  </div>,
  .emotion-0 {
  color: #808080;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  padding-bottom: 24px;
}

<div
    className="emotion-0"
  >
     
  </div>,
  .emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited,
.emotion-0 .noop {
  background-color: #73b61c;
}

.emotion-0:hover,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-0[aria-disabled=true],
.emotion-0 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<button
    className="emotion-0"
    onClick={[Function]}
    type="button"
  >
    Edit
  </button>,
]
`;

exports[`<AccountProfileForm /> should render properly when a user edits their name 2`] = `
Array [
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

<h3
    className="emotion-0"
  >
    Email: jane.doe@zorroa.com
  </h3>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-1 {
  padding-top: 8px;
}

.emotion-2 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-3 {
  position: relative;
}

.emotion-4 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-4:focus,
.emotion-4 .noop {
  border: 2px solid #73b61c;
  outline: #73b61c;
  color: #000000;
  background-color: #ffffff;
}

.emotion-4:hover,
.emotion-4 .noop {
  border: 2px solid #ffffff;
}

.emotion-5 {
  padding-top: 8px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-11 button,
.emotion-11 a {
  margin-right: 16px;
}

.emotion-12 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-12,
.emotion-12:hover,
.emotion-12:visited,
.emotion-12 .noop {
  background-color: #808080;
}

.emotion-12:hover,
.emotion-12 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-12[aria-disabled=true],
.emotion-12 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-13 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-13,
.emotion-13:hover,
.emotion-13:visited,
.emotion-13 .noop {
  background-color: #73b61c;
}

.emotion-13:hover,
.emotion-13 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-13[aria-disabled=true],
.emotion-13 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<form
    action=""
    className="emotion-0"
    method="post"
    onSubmit={[Function]}
  >
    <div
      className="emotion-1"
    >
      <label
        className="emotion-2"
        htmlFor="firstName"
      >
        First Name
      </label>
      <div
        className="emotion-3"
      >
        <input
          autoFocus={true}
          className="emotion-4"
          disabled={false}
          id="firstName"
          name="firstName"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-5"
      >
         
      </div>
    </div>
    <div
      className="emotion-1"
    >
      <label
        className="emotion-2"
        htmlFor="lastName"
      >
        Last Name
      </label>
      <div
        className="emotion-3"
      >
        <input
          className="emotion-4"
          disabled={false}
          id="lastName"
          name="lastName"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-5"
      >
         
      </div>
    </div>
    <div
      className="emotion-11"
    >
      <button
        className="emotion-12"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
      <button
        aria-disabled={true}
        className="emotion-13"
        onClick={[Function]}
        type="submit"
      >
        Save
      </button>
    </div>
  </form>,
]
`;

exports[`<AccountProfileForm /> should render properly when a user edits their name 3`] = `
Array [
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #e3f7e8;
  border-radius: 2px;
  padding: 12px;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-2 a {
  color: #ffffff;
  background-color: #009f22;
  padding: 6px;
  margin-left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 2px;
}

.emotion-2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #00791a;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#009f22"
        data-file-name="checkmark.svg"
        height={20}
      />
      <div
        className="emotion-2"
        role="alert"
      >
        New name saved.
      </div>
    </div>
  </div>,
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

<h3
    className="emotion-0"
  >
    Email: jane.doe@zorroa.com
  </h3>,
  .emotion-0 {
  padding-top: 24px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

<div
    className="emotion-0"
  >
    Name
  </div>,
  .emotion-0 {
  color: #808080;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
  padding-bottom: 24px;
}

<div
    className="emotion-0"
  >
    Jane Doe
  </div>,
  .emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited,
.emotion-0 .noop {
  background-color: #73b61c;
}

.emotion-0:hover,
.emotion-0 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-0[aria-disabled=true],
.emotion-0 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<button
    className="emotion-0"
    onClick={[Function]}
    type="button"
  >
    Edit
  </button>,
]
`;
